# shai-hulud-audit-toolkit

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  coverage.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: __init__.py  shai_hulud_sources.json
docs/: TESTING.md  USAGE.md
scripts/: __init__.py  audit.py  fetch.py  scan.py
scripts/scan_core/: __init__.py  advisory.py  config.py  models.py  scanner.py  utils.py
scripts/scan_core/reporting/: __init__.py  compact.py  formatters.py  json_output.py  structured.py
scripts/scan_core/scanners/: __init__.py  cache.py  exfiltration.py  iocs.py  lockfiles.py  node_modules.py  package_json.py  patterns.py
tests/: test_run_audit.py  test_scan_findings.py  test_scan_integration.py  test_scan_units.py
tests/audit/: test_audit_cli.py
tests/fetch/: test_fetch_cli.py
tests/scan/: test_scan_cli.py  test_scan_components.py
